# goit-pythonweb-hw-10

./: Docker-compose.yaml  DockerFile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5627ee2f5619_init.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  settings.py
src/database/models/: contacts.py  users.py
src/repository/: contacts.py  users.py
src/schemas/: users.py
src/services/: auth.py  contacts.py  users.py
